--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,5 @@ board = leonardo
 framework = arduino
 lib_deps=
  jandrassy/WiFiEspAT@^2.0.0
+ mheironimus/Joystick@^2.1.1
+ olikraus/U8g2@^2.36.15
